--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -3044,6 +3044,7 @@ links:
                             type: object
                             extra:
                                 type: string
+                                allowkey: '*a-z0-9_#\/:.-'
                                 allow: '*a-z0-9_#\/:.-'
                         priority:
                             desc: Priority of applying this replacement, vs others.
@@ -4123,7 +4124,7 @@ links:
                 const: origins:multiple
         extra:
             nopanel: true
-            allow: '*a-z0-9_#\/:.-'
+            allowkey: '*a-z0-9_#\/:.-'
             or:
               - link: power_base
               - link: custom_power_base
