--- a/18/powers.yaml
+++ b/18/powers.yaml
@@ -3376,6 +3376,7 @@ links:
                             type: object
                             extra:
                                 type: string
+                                allowkey: '*a-z0-9_#\/:.-'
                                 allow: '*a-z0-9_#\/:.-'
                         priority:
                             desc: Priority of applying this replacement, vs others.
@@ -4597,7 +4598,7 @@ links:
                 const: origins:multiple
         extra:
             nopanel: true
-            allow: '*a-z0-9_#\/:.-'
+            allowkey: '*a-z0-9_#\/:.-'
             or:
               - link: power_base
               - link: custom_power_base
