--- a/15/powers.yaml
+++ b/15/powers.yaml
@@ -4507,6 +4507,7 @@ links:
                     string-origins-math:healing_linked_resource:
                         duration:
                             desc: The amount of ticks the healing amount is stored.
+                            type: integer
                         entity_action:
                             desc: If specified, the specified actions will be executed once the amount of healing received has been set.
                             link: entity_action
